--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,18 +8,93 @@
     box-shadow: none;
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid #777777;
-    /* border-width: 960px; */;
-
+    border-bottom: 2px double white;
+    /* border-width: 960px; */
+    background: #101010
 }
 
-a.navbar-brand {
-    font-size: 30px;
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav>li>a {
+    transition: 0.3s ease-out
 }
 
-.tab {
-    font-size: 16px;
+
+.navbar-default .navbar-brand {
+    color: white;
+    font-size: 40px;
+    text-shadow: none;
 }
+
+.navbar-default .navbar-brand:hover {
+    /* color: lightskyblue; */
+    color: #fff;
+    transform: scale(1.2, 1.2);          
+}
+
+.navbar-default .navbar-brand:focus {
+    color: white;
+    text-shadow: black;
+}
+
+.navbar-default .navbar-nav>li>a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /* display: block; */
+    /* width: 100%; */
+    /* padding: 1px; */
+    /* position: relative; */
+    /* z-index: 2; */
+    text-decoration: none;
+    color: #fff;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    font-size: 18px;
+    /* font-weight: 600; */
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;  
+    text-shadow: none;
+}
+  
+.navbar-default .navbar-nav>li>a:after {
+    content: "";
+    height: 2px;
+    left: 0;
+    top: 0;
+    width: 2px;
+    position: absolute;
+    -webkit-transition: width 0.5s ease, background-color 1s ease;
+    -moz-transition: width 0.5s ease, background-color 1s ease;;
+    -ms-transition: width 0.5s ease, background-color 1s ease;;
+    -o-transition: width 0.5s ease, background-color 1s ease;;
+    transition: width 0.5s ease, background-color 1s ease;;
+    right: 0;
+    margin: 0 auto;
+}
+  
+.navbar-default .navbar-nav>li>a:hover {
+    color: lightskyblue;
+    -webkit-transition: color 0.3s ease, scale 0.3 ease;
+    -moz-transition: color 0.3s ease, scale 0.3 ease;
+    -ms-transition: color 0.3s ease, scale 0.3 ease;
+    -o-transition: color 0.3s ease, scale 0.3 ease;
+    transition: color 0.3s ease, scale 0.3 ease;
+    cursor: pointer;
+
+}
+  
+.navbar-default .navbar-nav>li>a:hover:after, 
+.navbar-default .navbar-nav>li>a:focus:after{
+    width: 100%;
+    background-color: lightskyblue;
+    text-shadow: none;
+}
+
+
+.navbar-default .navbar-nav>li>a:focus {
+    color: lightskyblue;
+    text-shadow: black;
+}
+
 
 @media (max-width: 1200px) {
     .myNav {
@@ -34,6 +109,6 @@ a.navbar-brand {
     }
 }
 
-.logo {
+/* .logo {
     width: 50px;
-}
+} */
