--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@ body {
   font-family: 'Josefin Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: #303030 */
+  background-color: #101010;
+  color: white;
 }
 
 code {
