--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -28,7 +28,9 @@
 .navbar-default .navbar-brand:hover {
     /* color: lightskyblue; */
     color: #fff;
-    transform: scale(1.2, 1.2);          
+    transform: scale(1.2, 1.2);    
+    text-shadow: 0px 0px 40px white;
+    font-weight: bold
 }
 
 .navbar-default .navbar-brand:focus {
@@ -73,11 +75,12 @@
   
 .navbar-default .navbar-nav>li>a:hover {
     color: lightskyblue;
-    -webkit-transition: color 0.3s ease, scale 0.3 ease;
-    -moz-transition: color 0.3s ease, scale 0.3 ease;
-    -ms-transition: color 0.3s ease, scale 0.3 ease;
-    -o-transition: color 0.3s ease, scale 0.3 ease;
-    transition: color 0.3s ease, scale 0.3 ease;
+    text-shadow: 0px 0px 40px white;
+    -webkit-transition: color 0.3s ease, text-shadow 0.3 ease;
+    -moz-transition: color 0.3s ease, text-shadow 0.3 ease;
+    -ms-transition: color 0.3s ease, text-shadow 0.3 ease;
+    -o-transition: color 0.3s ease, text-shadow 0.3 ease;
+    transition: color 0.3s ease, text-shadow 0.3 ease;
     cursor: pointer;
 
 }
