--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -2,16 +2,19 @@
     margin-top: 35px;
     /* padding: 30px 30px 0px; */
     border: 3px solid white;
-    border-radius: 50%;
+    /* border-radius: 50%; */
+    transition: 0.3s ease-in-out;
 }
 
 .project-card {
     /* padding: 20px; */
-    transition: 0.3s ease-in-out;
-    box-shadow: 10px 10px 20px black;
+    transition: 0.2s ease-in-out;
+    box-shadow: 10px 10px 10px black;
     text-decoration: none;
+    /* background: #000000; */
     border: none;
-    background: #000000;
+    background: #101010;
+    /* background: #ffffff; */
 }
 
 .project-card:hover {
@@ -19,21 +22,22 @@
     transform: scale(1.04, 1.04);
     box-shadow: 5px 5px 30px #888888;
     text-decoration: none;
-    /* color: white; */
     border: none;
+
+
+    background: #000000;
+    /* background: #ffffff */
 }
 
 .textWrapper {
     color: #888888;
-    transition: 0.3s ease-in-out;
+    transition: 0.2s ease-in-out;
     padding: 20px;
-    /* border: 1px dotted white; */
-    /* border-top: none */
 }
 
 .textWrapper:hover {
     color: white;
-    /* color: lightskyblue; */
+    /* color: black; */
 }
 
 .thumbnail .caption {
