--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,29 +8,30 @@
     box-shadow: none;
     border: none;
     border-radius: 0;
-    border-bottom: 2px double white;
-    /* border-width: 960px; */
+    border-bottom: 2px solid white;
     background: #101010
 }
 
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav>li>a {
-    transition: 0.3s ease-out
+    transition: 0.2s ease-out
 }
 
 
 .navbar-default .navbar-brand {
     color: white;
-    font-size: 40px;
-    text-shadow: none;
+    font-size: 50px;
+    text-shadow: 0px 0px 3px white;
+    letter-spacing: 1px
 }
 
 .navbar-default .navbar-brand:hover {
     /* color: lightskyblue; */
     color: #fff;
-    transform: scale(1.2, 1.2);    
-    text-shadow: 0px 0px 40px white;
-    font-weight: bold
+    transform: scale(1.1, 1.1);    
+    text-shadow: 0px 0px 20px white;
+    /* font-weight: bold; */
+    /* letter-spacing: 5px; */
 }
 
 .navbar-default .navbar-brand:focus {
@@ -51,10 +52,10 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     font-size: 18px;
-    /* font-weight: 600; */
     -webkit-user-select: none;
     -webkit-touch-callout: none;  
     text-shadow: none;
+    letter-spacing: 1.1px
 }
   
 .navbar-default .navbar-nav>li>a:after {
