--- a/src/components/PDFButton/PDFButton.css
+++ b/src/components/PDFButton/PDFButton.css
@@ -13,13 +13,14 @@
     align-items: center;
     border: 1px solid white;
     background: white;
-    border-radius: 5px;
+    border-radius: 3px;
     padding: 2px;
 }
 
 .pdfButton:hover {
     cursor: pointer;
     transform: scale(1.02, 1.02);
+    background: white;
     box-shadow: 0px 0px 20px white;
 }
 
