--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,20 +1,15 @@
 .thumbnail > img {
     margin-top: 35px;
-    /* padding: 30px 30px 0px; */
-    border: 3px solid white;
-    /* border-radius: 50%; */
-    transition: 0.3s ease-in-out;
+    border: 3px solid #888888;
 }
 
 .project-card {
-    /* padding: 20px; */
     transition: 0.2s ease-in-out;
     box-shadow: 10px 10px 10px black;
     text-decoration: none;
-    /* background: #000000; */
     border: none;
-    background: #101010;
-    /* background: #ffffff; */
+    /* border: 0.5px solid lightgrey; */
+    background: #1a1a1a;
 }
 
 .project-card:hover {
@@ -23,10 +18,8 @@
     box-shadow: 5px 5px 30px #888888;
     text-decoration: none;
     border: none;
-
-
+    /* border: 0.5px solid lightgrey; */
     background: #000000;
-    /* background: #ffffff */
 }
 
 .textWrapper {
@@ -36,8 +29,7 @@
 }
 
 .textWrapper:hover {
-    color: white;
-    /* color: black; */
+    color: lightgrey;
 }
 
 .thumbnail .caption {
