--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,15 +1,14 @@
 .myNav {
-    width: 1170px;
+    /* width: 1170px; */
     display: flex;
     margin: 0 auto 60px;
     align-items: center;
     min-height: 100px;
-    background: white;
-    box-shadow: none;
+    box-shadow: 2px 2px 5px black;
     border: none;
     border-radius: 0;
-    border-bottom: 2px solid white;
-    background: #101010
+    border-bottom: 2px solid lightgrey;
+    background: #1a1a1a;
 }
 
 .navbar-default .navbar-brand,
@@ -19,23 +18,24 @@
 
 
 .navbar-default .navbar-brand {
-    color: white;
-    font-size: 40px;
-    text-shadow: 0px 0px 8px white;
-    letter-spacing: 1px
+    color: lightgrey;
+    font-size: 50px;
+    padding: 20px;
+    text-shadow: 0px 0px 5px white;
+    /* letter-spacing: 1px */
 }
 
 .navbar-default .navbar-brand:hover {
     /* color: lightskyblue; */
-    color: #fff;
-    transform: scale(1.1, 1.1);    
-    text-shadow: 0px 0px 20px white;
+    color: white;
+    /* transform: scale(1.05, 1.05);     */
+    text-shadow: 0px 0px 10px white;
     /* font-weight: bold; */
     /* letter-spacing: 5px; */
 }
 
 .navbar-default .navbar-brand:focus {
-    color: white;
+    color: lightgrey;
     text-shadow: black;
 }
 
@@ -47,7 +47,7 @@
     /* position: relative; */
     /* z-index: 2; */
     text-decoration: none;
-    color: #fff;
+    color: lightgrey;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
