--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -3,12 +3,6 @@ form {
     padding: 20px;
 }
 
-.contactTitle {
-    text-align: center;
-    font-size: 30px;
-    margin: 0px 0px 20px
-}
-
 .email {
     color: lightskyblue;
     font-size: 20px;
@@ -59,5 +53,9 @@ a.email:hover {
 }
 
 .contact-wrapper {
-    min-height: calc(100vh);
+    background: #1a1a1a;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    padding: 50px 0px;
+    margin-top: 30px;
 }
